# gudhi-devel

./: CMakeGUDHIVersion.txt  CMakeLists.txt  Conventions.txt
Gudhi_library_1.0.1/: CMakeLists.txt  Doxyfile  README  headerdoc.tex
Gudhi_library_1.0.1/doc/: functor_gudhi.eps  functor_gudhi.xcf  list-of-notations.tex  main_page
Gudhi_library_1.0.1/examples/: performance_rips_persistence.cpp  rips_multifield_persistence.cpp  rips_persistence.cpp
code/src/: CMakeLists.txt  Doxyfile  Euclidean_rips_naive_geometry_traits.h  Filtered_simplex_tree_node.cpp  Flag_simplex_tree.h  Flag_simplex_tree.hpp  NeighborGraph.h  Rips_graph_naive.h  SimplexDataFilteredSimplicialComplexDS.h  Simplex_tree.hpp  Simplex_tree_iterators.h  Simplex_tree_node_explicit_storage.h  Simplex_tree_siblings.h  SimplicialComplexDS.h  SimplifiableSimplicialComplexDS.h  main.cpp
code/src/combinatorics/: Simple_skeleton_blockers_traits.h  Simplex.h  Simplex_tree.h  Simplex_tree.hpp  Simplex_tree_iterators.h  SimplifiableSimplicialComplexDS.h  Simplifiable_skeleton_blocker.h  Skeleton_blocker_link_complex.h
code/src/data/: sphere2D.off
code/src/geometry/: Euclidean_geometry.h  MetricSpace.h  Rips_graph_naive.h  SkeletonBlockerGeometricDS.h  Skeleton_blocker_geometric_complex.h  Skeleton_blocker_simple_geometric_traits.h
code/src/test/: TestContraction.cxx  TestPersistentCohomology.cpp  TestSimplexTree.cpp  TestSimplifiable.cxx  TestSkeletonBlockerComplex.cxx
code/src/topology/: Column_list.h  Multi_field.h  Persistent_cohomology.h
code/src/utils/: Test.h  Utils.h  iofile.h
src/: CMakeLists.txt  Doxyfile  Euclidean_geometry.h  Euclidean_rips_naive_geometry_traits.h  FilteredSimplicialComplexDS.h  Filtered_simplex_tree_node.cpp  Filtered_simplex_tree_node.h  Flag_simplex_tree.h  Flag_simplex_tree.hpp  Flag_simplex_tree_iterators.h  MetricSpace.h  NeighborsGeometryTraits.h  Simplex_tree.h  Simplex_tree.hpp  Simplex_tree_iterators.h  Simplex_tree_node_explicit_storage.cpp  Simplex_tree_node_explicit_storage.h  Simplex_tree_siblings.h  SimplicialComplexDS.h  iofile.h  main.cpp
src/Bitmap_cubical_complex/example/: Bitmap_cubical_complex_periodic_boundary_conditions.cpp  CMakeLists.txt  distance_from_collection_of_cubes.cpp  setting_up_filtration_of_individual_cells_example.cpp  topological_inference.cpp
src/Bitmap_cubical_complex/test/: Bitmap_read_perseus_file_test.cpp  Bitmap_test.cpp  CMakeLists.txt
src/Contraction/example/: CMakeLists.txt  Rips_contraction.cpp
src/Contraction/test/: CMakeLists.txt
src/Dolphinn/doc/: COPYRIGHT  Intro_dolphinn.h  dol2.eps  hyplsh.eps  linelsh.eps
src/Dolphinn/example/: CMakeLists.txt  Dolphinn_example_knn_from_points.cpp  Dolphinn_example_radius_from_off.cpp
src/Dolphinn/test/: CMakeLists.txt  Dolphinn_test.cpp
src/GudhUI/model/: Model.h
src/GudhUI/utils/: Dimension_reduction.h  Is_manifold.h
src/GudhUI/view/: FirstCoordProjector.h  Projection_from_file.h  Viewer_instructor.cpp  Viewer_instructor.h
src/Hasse_diagram/doc/: Hasse_diagam.h
src/Hasse_diagram/example/: CMakeLists.txt  Hasse_diagram_example.cpp  Hasse_diagram_from_cubical_complex.cpp  Hasse_diagram_from_simplex_tree.cpp
src/Hasse_diagram/test/: CMakeLists.txt  Hasse_diagram_test.cpp
src/Isomorphism_statistical_test/doc/: Gudhi_Isomorphism_Test_doc.h
src/Isomorphism_statistical_test/example/: CMakeLists.txt  example_read_distance_matrix.cpp  example_simple.cpp  example_step_by_step.cpp
src/Persistence_representations/concept/: Topological_data_with_distances.h
src/Persistence_representations/test/: persistence_intervals_test.cpp  persistence_lanscapes_on_grid_test.cpp  persistence_lanscapes_test.cpp
src/Persistent_cohomology/concept/: FilteredComplex.h
src/Persistent_cohomology/doc/: FilteredSimplicialComplexDS.h
src/Persistent_cohomology/example/: CMakeLists.txt  alpha_shapes_persistence.cpp  persistence_from_file.cpp  rips_persistence.cpp  rips_persistence_from_alpha_shape_3.cpp
src/Persistent_cohomology/examples/: CMakeLists.txt  performance_rips_persistence.cpp  rips_multifield_persistence.cpp  rips_persistence.cpp
src/Persistent_cohomology/test/: CMakeLists.txt  persistent_cohomology_unit_test.cpp
src/Phat/doc/: Intro_phat_interface.h  description.tex
src/Phat/example/: CMakeLists.txt  CTestTestfile.cmake  Makefile  _bettiNumbers  cmake_install.cmake  cubical_complex_persistence_with_phat  cubical_complex_persistence_with_phat.cpp  example_cubes  out_bettiNumbers  pairs  persistence_with_phat_example.cpp  phat_persistence_bettiNumbers  plane_circle  random_pointcloud  rips_persistence_with_phat  rips_persistence_with_phat.cpp
src/Phat/test/: CMakeLists.txt  phat_test.cpp  random_cubical_complex
src/Phat/utilities/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  TODO  alpha_complex_3d_persistence_with_PHAT.cpp  alpha_complex_persistence_with_PHAT.cpp  cmake_install.cmake  cubical_complex_persistence_with_PHAT.cpp  cubical_complex_with_periodic_boundary_conditions_persistence_with_PHAT.cpp  rips_persistence_with_PHAT.cpp
src/Rips_complex/example/: CMakeLists.txt
src/Rips_complex/utilities/: CMakeLists.txt  rips_lower_star_filtration_persistence.cpp
src/Simplex_array_list/example/: chrono.cpp
src/Simplex_array_list/test/: test.cpp
src/Simplex_tree/example/: README  (+9 more)
src/combinatorics/: SimplexDataFilteredSimplicialComplexDS.h  Simplex_tree.h  Simplex_tree_node_explicit_storage.cpp  Simplex_tree_node_explicit_storage.h  Simplex_tree_siblings.h  SimplicialComplexDS.h  Skeleton_blocker_complex.h  Skeleton_blocker_complex_iterators.h  Skeleton_blocker_complex_visitor.h
src/cython/: CMakeLists.txt  gudhi.pyx.in
src/data/: Readme.txt  tore3D.off
src/geometry/: Euclidean_geometry.h  MetricSpace.h  Rips_graph_naive.h  Skeleton_blocker_geometric_complex.h  Skeleton_blocker_simple_geometric_traits.h
src/test/: TestContraction.cxx  TestPersistentCohomology.cpp  TestSimplexTree.cpp  TestSimplifiable.cxx  TestSkeletonBlockerComplex.cxx
src/topology/: Column_list.h  Persistent_cohomology.h
src/utils/: Clock.h  Test.h  Utils.h  iofile.h
(+664 files in other folders)
